Update to Bootstrap 4.x and FontAwesome

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -1,11 +1,10 @@
-<div class="container-fluid">
+<div class="container">
 
-   <div class="row-fluid">
+   <div class="row">
 
-
-      <div class="col-md-4">
-         <div class="well">
-            <h2><span class="glyphicon glyphicon-bullhorn"></span> Speaking</h2>
+      <div class="col-4">
+         <div class="jumbotron">
+            <h2><i class="fas fa-bullhorn"></i> Speaking</h2>
             <div class="text-justify">
                <p>It's part of my job as a Technical Lead to help train and mentor
                   development teams - and a big part of that is presenting technical
@@ -25,12 +24,12 @@
          </div>
       </div>
 
-      <div class="col-md-8 well">
+      <div class="col">
 
          <div>
             <h3>You're the Tech Lead... <span style="font-weight:bolder; font-style: oblique">you</span> fix it!</h3>
-            <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-               <a href="http://bit.ly/YouFixIt-Deck" title="YOU Fix It! Slide Deck">Slide Deck</a></span>
+            <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
+               <a href="http://bit.ly/YouFixIt-Deck" title="YOU Fix It! Slide Deck">Slide Deck</a></p>
             <ul class="text-muted">
                <li><a href="https://www.meetup.com/DeveloperSouthCoast/events/255391926/">Dev South Coast - April 2019</a></li>
                <li><a href="https://www.meetup.com/dotnetsouthwest/events/259666974/">Dotnet South West Meetup - March 2019</a>
@@ -56,8 +55,8 @@
 
          <div>
             <h3>Azure In Action - CosmosDB, Functions and ServiceBus in Perfect Harmony</h3>
-            <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-               <a href="https://bit.ly/CloudAuditDeck" title="Cloud Audit Slide Deck">Slide Deck</a></span>
+            <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
+               <a href="https://bit.ly/CloudAuditDeck" title="Cloud Audit Slide Deck">Slide Deck</a></p>
             <ul class="text-muted">
                <li><a href="https://dddsouthwest.com/proposed-talks/106">DDD South West 8 - April 2018</a></li>
             </ul>
@@ -78,12 +77,12 @@
          <hr />
          <div>
             <h3>Honey, I shrunk `ConfigureServices()`</h3>
-            <span class="pull-right"><span class="glyphicon glyphicon-code" aria-hidden="true"></span>
+            <p class="text-right"><i class="fas fa-code" aria-hidden="true"></i>
                <a href="https://github.com/Rammesses/IoC.Discovery"
-               title="Link to source repo">Repo</a></span>
-            <span class="pull-right"><span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+               title="Link to source repo">Repo</a>&nbsp;
+               <i class="fas fa-link" aria-hidden="true"></i>
                <a href="https://nuggets.hammond-turner.org.uk/2018/06/honey-i-shrunk-configureservices.html"
-                  title="Link to blog post">Blog Post</a></span>
+                  title="Link to blog post">Blog Post</a></p>
             <ul class="text-muted">
                <li><a href="https://www.developerdeveloperdeveloper.com/">DDD Reading 2018 - June 2018</a> (10 minute
                   Grok Talk)</li>
@@ -105,8 +104,8 @@
          <hr />
          <div>
             <h3>Service Discovery with Consul.io for the .Net developer</h3>
-            <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-               <a href="https://bit.ly/Consul4Net-Slides" title="Consul slide deck">Slide Deck</a></span>
+            <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
+               <a href="https://bit.ly/Consul4Net-Slides" title="Consul slide deck">Slide Deck</a></p>
             <ul class="text-muted">
                <li><a
                      href="https://www.dddsouthwest.com/Pages/ddd-7-sessions/service-discovery-with-consul-io-for-the-dot-net-developer.aspx">DDD
@@ -129,12 +128,12 @@
          <hr />
          <div>
             <h3>10 <b><u>more</u></b> things you need to do to succeed as a Tech Lead</h3>
-            <span class="pull-right">
-               <span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <p class="text-right">
+               <i class="fas fa-download" aria-hidden="true"></i>
                <a href="https://bit.ly/10-more-things-deck" title="10 More Things slide deck">Slide Deck</a>&nbsp;
-               <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+               <i class="fas fa-film" aria-hidden="true"></i>
                <a href="https://bit.ly/10-more-things-video"
-                  title="10 More Things video from SkillsMatter">Video</a></span>
+                  title="10 More Things video from SkillsMatter">Video</a></p>
             <ul class="text-muted">
                <li><a
                      href="https://skillsmatter.com/meetups/9478-10-more-things-you-need-to-do-to-succeed-as-a-tech-lead-with-joel-hammond-turner">SkillsMatter
@@ -162,9 +161,9 @@
 
          <div>
             <h3>Getting your Splunk on - a developer's guide to Splunk</h3>
-            <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
                <a href="https://bit.ly/getting-your-splunk-on-deck" title="Getting Your Splunk On slide deck">Slide
-                  Deck</a></span>
+                  Deck</a></p>
             <ul class="text-muted">
                <li><a href="https://www.developerdeveloperdeveloper.com/Sessions/Details/18">DDD 11 - Sept 2016</a></li>
             </ul>
@@ -182,9 +181,9 @@
 
          <div>
             <h3>Logging and Monitoring - How to keep DevOps happy</h3>
-            <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
                <a href="https://bit.ly/logging-and-monitoring-deck" title="Logging and Monitoring slide deck">Slide
-                  Deck</a></span>
+                  Deck</a></p>
             <ul class="text-muted">
                <li><a
                      href="https://www.dddsouthwest.com/Blog/Post/68/Proposed-Session--Logging-and-Monitoring---How-to-keep-DevOps-happy">DDD
@@ -206,8 +205,8 @@
 
          <div>
             <h3>So you want to be a Tech Lead? 10 things you need to do to succeed.</h3>
-            <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-               <a href="https://bit.ly/10-things-deck" title="10 Thinkgs slide deck">Slide Deck</a></span>
+            <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
+               <a href="https://bit.ly/10-things-deck" title="10 Thinkgs slide deck">Slide Deck</a></p>
             <ul class="text-muted">
                <li><a href="https://dddeastanglia2014.azurewebsites.net/Session/Details/3139.html">DDD East Anglia -
                      Sept 2014</a></li>
@@ -226,9 +225,9 @@
 
          <div>
             <h3>An Introduction to Octopus Deployment</h3>
-            <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
                <a href="https://bit.ly/intro-to-octopusdeploy-deck"
-                  title="Introduction to OctopusDeploy slide deck">Slide Deck</a></span>
+                  title="Introduction to OctopusDeploy slide deck">Slide Deck</a></p>
             <ul class="text-muted">
                <li><a href="https://dddeastanglia2013.azurewebsites.net/Sessions.htm">DDD East Anglia - Sept 2013</li>
                </li>
@@ -252,8 +251,8 @@
 
          <div>
             <h3>Using your NuGet for fun and profit</h3>
-            <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-               <a href="https://bit.ly/using-your-nuget-deck" title="Using your NuGet slide deck">Slide Deck</a></span>
+            <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
+               <a href="https://bit.ly/using-your-nuget-deck" title="Using your NuGet slide deck">Slide Deck</a></p>
             <ul class="text-muted">
                <li>DDD South West 4 - May 2012</a></li>
                <li><a href="https://dddeastanglia2013.azurewebsites.net/Sessions.htm">DDD North - Oct 2012</a></li>
