--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,30 +1,43 @@
-<div class="container-fluid">
+<div class="container">
 
-<div class="row-fluid">
+<div class="row">
   
   
-  <div class="col-md-6">
+  <div class="col-6">
     <div class="jumbotron">
       <h1>About Me</h1>
+      <img class="hero-image" src="https://lh4.googleusercontent.com/-TgRw25EW5zI/AAAAAAAAAAI/AAAAAAAAL7k/SbLenKDqfKQ/s250-c-k/photo.jpg" alt="Joel Hammond-Turner">      
       <div class="text-justify">
         <p>I've a very broad experience of software development over 15 years and a passion for both technology and 
 		       elegance in my solutions that make me an extremely capable software architect.</p>
 	      <p>Personable and professional, I revel in complex challenges, but always make time to coach and mentor team members.</p>
 	      <p>And I can shoot & edit video and create graphics too!</p>
         <p>You can see a brief history of my professional life to the right.</p>
-        <h3>Why "<strong>new</strong>, new"?</h3>
+      </div>
+    </div>
+
+    <div>
+      <h2>About this site</h2>
+      <div class="text-justify">
+          <em>Why "<strong>new</strong>, new"?</em>
         <p>Quite simply this is a rework of my old web site - an effectively static ASP.Net MVC web site  - 
            into a genuinely static web site that I can serve directly out of Amazon S3.</p>
         <p>Because it's cheaper!</p>
+        <p>For more information, see my blog posts:
+          <ul>
+            <li><a href="https://nuggets.hammond-turner.org.uk/2015/09/html5-angularjs-and-hosting-on-aws-s3.html">HTML5, AngularJS and hosting on AWS S3 - Oh my!</a></li>
+            <li><a href="https://nuggets.hammond-turner.org.uk/2017/11/the-6-step-happy-path-to-https-on.html">The 6 Step Happy Path to HTTPS on Amazon S3 and Cloudfront</a></li>
+          </ul>
+        </p>
       </div>
     </div>
   </div>
 
 
-  <div class="col-md-6" ng-include="$scope.historyIndexUrl">    
+  <div class="col-6" ng-include="$scope.historyIndexUrl">    
   </div>
   
-  <div class="col-md-6">
+  <div class="col-6">
     	 						
     <ul class="timeline">
         <!-- Landmark -->
