--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,61 +1,61 @@
-<div class="container-fluid">
+<div class="container">
 
-<div class="row-fluid">
-  <div class="col-md-3">
-    <div class="well sidebar-nav">
-        <div>
-          <a class="twitter-timeline" href="https://twitter.com/rammesses" data-widget-id="273547403695624192">Tweets by @rammesses</a>
-          </div>
-    </div><!--/.well -->
-  </div><!--/span-->
-  
-  <div class="col-md-9">
+<div class="row">
+  <div class="col">
     <div class="jumbotron">
       <img class="hero-image" src="https://lh4.googleusercontent.com/-TgRw25EW5zI/AAAAAAAAAAI/AAAAAAAAL7k/SbLenKDqfKQ/s250-c-k/photo.jpg" alt="Joel Hammond-Turner">
       <h1><span class="glyphicon glyphicon-globe"></span> Hello t'Internet</h1>
       <p>Welcome to my <strong>new</strong>, new home on the net.</p>
-      <p><a class="btn btn-sml btn-primary" ng-href="/#!/about">Learn More <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+      <p><a class="btn btn-sml btn-primary" ng-href="/#!/about">Learn More <i class="fas fa-chevron-right"></i></a></p>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="card-body">
+            <h4><i class="fas fa-comment"></i> Golden Nuggets</h4>
+            <p>My blog - delivering nuggets of technical information for .Net developers</p>
+            <p><a class="btn btn-sm btn-primary" href="https://nuggets.hammond-turner.org.uk/">View blog <i class="fas fa-chevron-right"></i></a></p>
+          </div>
+        </div>
+      </div>  
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="card-body">
+            <h4><i class="fas fa-bullhorn"></i> Speaking</h4>
+            <p>I get about a bit, and have spoken at quite a few community conferences and user groups - and I am always looking for more opportunities.</p>
+            <p><a class="btn btn-sm btn-primary" href="/#!/speaking">Learn more <i class="fas fa-chevron-right"></i></a></p>
+          </div>
+        </div>          
+      </div>  
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="card-body">
+            <h4><i class="fas fa-thumbs-up"></i> The Social Network(s)</h4>
+            <p>These are probably the best ways to interact with me.</p>
+              <div class="row">
+                <div class="col">
+                  <p><a href="https://www.linkedin.com/in/joelht" ><img src="https://www.linkedin.com/img/webpromo/btn_viewmy_160x33.gif" width="160" height="33" border="0" alt="View Joel Hammond-Turner's profile on LinkedIn"></a></p>
+                </div>
+                <div class="col">
+                  <p><a href="https://twitter.com/rammesses" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @rammesses</a></p>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
     </div>
   </div>
+
+  <div class="col-3">
+    <div class="card">
+        <div class="card-body">
+          <a class="twitter-timeline" href="https://twitter.com/rammesses" data-widget-id="273547403695624192">Tweets by @rammesses</a>
+          </div>
+    </div>
+  </div> 
 </div>  
 
-<div class="row-fluid">
-  <div class="col-md-3">
-    <div class="well sidebar-nav">
-    <h2><span class="glyphicon glyphicon-comment"></span> Golden Nuggets</h2>
-      <p>My blog - delivering nuggets of technical information for .Net developers</p>
-    <p><a class="btn btn-sm btn-primary" href="https://nuggets.hammond-turner.org.uk/">View blog <span class="glyphicon glyphicon-chevron-right"></span></a></p>
-  </div>
-  </div>
-  
-  <div class="col-md-3">
-    <div class="well sidebar-nav">
-      <div>
-        <h2><span class="glyphicon glyphicon-bullhorn"></span> Speaking</h2>
-        <p>I get about a bit, and have spoken at quite a few community conferences and user groups - and I am always looking for more opportunities.</p>
-        <p><a class="btn btn-sm btn-primary" href="/#!/speaking">Learn more <span class="glyphicon glyphicon-chevron-right"></span></a></p>
-      </div>
-    </div>          
-  </div>
-
-  <div class="col-md-3">
-    <div class="well sidebar-nav">
-    <h2><span class="glyphicon glyphicon-thumbs-up"></span> The Social Network(s)</h2>
-    <p>These are probably the best ways to interact with me.</p>
-    <div class="container-fluid">
-      <div class="col-sm2">
-        <p><a href="https://www.linkedin.com/in/joelht" ><img src="https://www.linkedin.com/img/webpromo/btn_viewmy_160x33.gif" width="160" height="33" border="0" alt="View Joel Hammond-Turner's profile on LinkedIn"></a></p>
-      </div>
-      <div class="col-sm2">
-        <p><a href="https://twitter.com/rammesses" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @rammesses</a></p>
-      </div>
-      <div class="col-sm2">
-        <div class="g-follow" data-annotation="bubble" data-height="24" data-href="//plus.google.com/u/0/117666997091968844601" data-rel="author"></div>
-      </div>
-    </div>
-  </div>
-  </div>
-</div><!--/row-->
 
 </div>
 
