Hacky-fix for image width on speaking page

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -17,7 +17,7 @@
                   opportunities.
                </p>
 
-               <img class="leftbar-image" src="/images/speaking_at_dddeastanglia_2015.jpg"
+               <img class="leftbar-image" style="width: 100%" src="/images/speaking_at_dddeastanglia_2015.jpg"
                   alt="Speaking at DDD East Anglia 2015."
                   title="Speaking at DDD East Anglia 2015. Image (c) Adrian Banks 2015" />
             </div>
