Added missing link to Reading .Net Meetup on Speaking page

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -58,6 +58,7 @@
             <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
                <a href="https://bit.ly/CloudAuditDeck" title="Cloud Audit Slide Deck">Slide Deck</a></p>
             <ul class="text-muted">
+               <li><a href="https://www.meetup.com/Reading-NET-Meetup/events/259365399/">Reading .Net Meetup Group - March 2019</a></li>
                <li><a href="https://dddsouthwest.com/proposed-talks/106">DDD South West 8 - April 2018</a></li>
             </ul>
             <div>
