Added missing link to CloudAudit repo on Speaking page

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -55,7 +55,9 @@
 
          <div>
             <h3>Azure In Action - CosmosDB, Functions and ServiceBus in Perfect Harmony</h3>
-            <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
+            <p class="text-right"><i class="fas fa-code" aria-hidden="true"></i>
+               <a href="http://bit.ly/CloudAuditRepo"
+               title="Link to source repo">Repo</a>&nbsp;<i class="fas fa-download" aria-hidden="true"></i>
                <a href="https://bit.ly/CloudAuditDeck" title="Cloud Audit Slide Deck">Slide Deck</a></p>
             <ul class="text-muted">
                <li><a href="https://www.meetup.com/Reading-NET-Meetup/events/259365399/">Reading .Net Meetup Group - March 2019</a></li>
