--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,11 @@
 <div class="container">
+  <div class="row">
+    <div class="col">
+      <a href="https://www.dddeastmidlands.com/" title="I'm speaking at DDD East Midlands!">
+        <img class="banner-image" src="/images/dddem_banner.png" alt="I'm speaking at DDD East Midlands!" />
+      </a>
+    </div>
+</div>  
 
 <div class="row">
   <div class="col">
