--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -31,6 +31,9 @@
             <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
                <a href="http://bit.ly/YouFixIt-Deck" title="YOU Fix It! Slide Deck">Slide Deck</a></p>
             <ul class="text-muted">
+               <li><a href="https://www.dddeastmidlands.com/">DDD East Midlands - October 2019</a> 
+                   <span aria-hidden="true"><i class="fas fa-clock"></i> Save the date!</span></li>
+               <li><a href="https://dddsouthwest.com/">DDD South West - April 2019</a></li>
                <li><a href="https://www.meetup.com/DeveloperSouthCoast/events/255391926/">Dev South Coast - April 2019</a></li>
                <li><a href="https://www.meetup.com/dotnetsouthwest/events/259666974/">Dotnet South West Meetup - March 2019</a>
                </li>
