Updated stuff so the CSS gets correctly published.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col">
       <a href="https://www.dddeastmidlands.com/" title="I'm speaking at DDD East Midlands!">
-        <img class="banner-image" src="/images/dddem_banner.png" alt="I'm speaking at DDD East Midlands!" />
+        <img class="banner-image" src="/images/dddem_banner.png" alt="I'm speaking at DDD East Midlands!" width="100%" />
       </a>
     </div>
 </div>  
@@ -10,7 +10,7 @@
 <div class="row">
   <div class="col">
     <div class="jumbotron">
-      <img class="hero-image" src="https://lh4.googleusercontent.com/-TgRw25EW5zI/AAAAAAAAAAI/AAAAAAAAL7k/SbLenKDqfKQ/s250-c-k/photo.jpg" alt="Joel Hammond-Turner">
+      <img class="hero-image" src="https://lh4.googleusercontent.com/-TgRw25EW5zI/AAAAAAAAAAI/AAAAAAAAL7k/SbLenKDqfKQ/s250-c-k/photo.jpg" alt="Joel Hammond-Turner"">
       <h1><span class="glyphicon glyphicon-globe"></span> Hello t'Internet</h1>
       <p>Welcome to my <strong>new</strong>, new home on the net.</p>
       <p><a class="btn btn-sml btn-primary" ng-href="/#!/about">Learn More <i class="fas fa-chevron-right"></i></a></p>
