--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col">
       <a href="https://www.dddeastmidlands.com/" title="I'm speaking at DDD East Midlands!">
-        <img class="banner-image" src="/images/dddem_banner.png" alt="I'm speaking at DDD East Midlands!" width="100%" />
+        <img class="banner-image" src="/images/dddem_banner.png" alt="I'm speaking at DDD East Midlands!" 
+             style="width:100%; margin-bottom:16px;" />
       </a>
     </div>
 </div>  
