Added TPL Dataflow to Speaking

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -27,6 +27,31 @@
       <div class="col">
 
          <div>
+            <h3>TPL Dataflow</h3>
+            <h5><span style="font-weight:bolder; font-style: oblique">The best little async library you've never heard of</span></h5>
+            <p class="text-right">
+                  <i class="fas fa-code" aria-hidden="true"></i>
+                  <a href="http://bit.ly/TPLDataflow-Repo" title="TPLDataflow source repo">Repo</a>
+                  <i class="fas fa-download" aria-hidden="true"></i>
+               <a href="http://bit.ly/TPLDataflow-Deck" title="TPLDataflow Slide Deck">Slide Deck</a></p>
+            <ul class="text-muted">
+               <li><a href="https://developerdeveloperdeveloper.com/Sessions/Details/252">DDD 14 (Reading) - October 2019</a> </li>
+            </ul>
+            <div>
+               <p>From the docs:<br />
+                  <blockquote>
+                  The <trong>Task Parallel Library</strong> (TPL) provides dataflow components to help increase the robustness of 
+                     concurrency-enabled applications.
+                  </blockquote></p>
+               <p>What it <i>actually</i> does is give you the tools to create in-process async pipelines in a simple, structured manner.</p>
+               <p>And I'm betting that like me (until recently), this is a library you'll never even have heard of.</p>
+               <p>I'll cover the basics - Sources, Targets and Blocks - and how to link them together into useful <i>asynchronous</i> and 
+                  <i>parallel</i> pipelines within your programs. We'll handle error conditions, cancellation and how to control the degree 
+                  of parallelism - with samples that give you a bit more than "Hello World".</p>
+            </div>
+         </div>
+
+         <div>
             <h3>You're the Tech Lead... <span style="font-weight:bolder; font-style: oblique">you</span> fix it!</h3>
             <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
                <a href="http://bit.ly/YouFixIt-Deck" title="YOU Fix It! Slide Deck">Slide Deck</a></p>
@@ -90,6 +115,7 @@
                <a href="https://nuggets.hammond-turner.org.uk/2018/06/honey-i-shrunk-configureservices.html"
                   title="Link to blog post">Blog Post</a></p>
             <ul class="text-muted">
+               <li><a href="https://www.meetup.com/reading-dot-net/events/261891974/">Reading Net Meetup #5 - June 2019</a> (10 minute lightning talk)</li>
                <li><a href="https://www.developerdeveloperdeveloper.com/">DDD Reading 2018 - June 2018</a> (10 minute
                   Grok Talk)</li>
             </ul>
