Added Sessionize link on Speaking page

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -16,7 +16,9 @@
                   plenty more ideas, and am always on the look out for new speaking
                   opportunities.
                </p>
-
+               <p>Find out more on<br/> 
+                  <a href="https://sessionize.com/joel-hammond-turner/" title="sessionize profile">
+                    <img src="https://sessionize.com/Assets/buttons/sessionize--logo-horizontal.png" width="200px" /></a></p>
                <img class="leftbar-image" style="width: 100%" src="/images/speaking_at_dddeastanglia_2015.jpg"
                   alt="Speaking at DDD East Anglia 2015."
                   title="Speaking at DDD East Anglia 2015. Image (c) Adrian Banks 2015" />
