Added TSP session to speaking

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -28,6 +28,33 @@
 
       <div class="col">
 
+
+         <div>
+            <h3>Solving the Travelling Surveyor problem</h3>
+            <h5><span style="font-weight:bolder; font-style: oblique">in .Net using Google OR Tools</span></h5>
+            <p class="text-right">
+               
+                  <i class="fas fa-code" aria-hidden="true"></i>
+                  <a href="https://bit.ly/or-tools-samples" title="TSP source repo">Repo</a>
+                  <i class="fas fa-download" aria-hidden="true"></i>
+               <a href="https://bit.ly/or-tools-deck" title="TSP Slide Deck">Slide Deck</a>
+               <i class="fas fa-film" aria-hidden="true"></i>
+               <a href="http://bit.ly/or-tools-video"
+                  title="Session recording on YouTube">Video</a></p>
+            <ul class="text-muted">
+               <li><a href="https://www.developerdeveloperdeveloper.com/sessions">DDD 2020 (Virtual) - October 2020</a> </li>
+            </ul>
+            <div>
+               <p>The "Travelling Salesman" problem is a computational classic - but firmly grounded in the real world.</p>
+               <p>In this session I discuss how at Landmark we used Google's Open-Source Optimisation & Routing (OR) Tools 
+                  to generate recommended routes for hundreds of surveyors and thousands of jobs on a daily basis for one 
+                  of the largest firms in the country.</p>
+               <p>I cover the basics of the problem, and some of the classic approaches before moving on to how to use the 
+                  tools. We'll look at some pitfalls and limitations - as well as how we created a fluent 
+                  API for describing general case routing problems to pass to the Google OR Tools library.</p>
+            </div>
+         </div>
+
          <div>
             <h3>TPL Dataflow</h3>
             <h5><span style="font-weight:bolder; font-style: oblique">The best little async library you've never heard of</span></h5>
