Added TftT talk to Speaking

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -28,6 +28,32 @@
 
       <div class="col">
 
+         <div>
+            <h3>Tales from the Trenches</h3>
+            <h5><span style="font-weight:bolder; font-style: oblique">Taming 20 years of legacy code</span></h5>
+            <p class="text-right">
+               
+                  <i class="fas fa-code" aria-hidden="true"></i>
+                  <a href="https://bit.ly/TalesFromTheTrenches-Repo" title="TftT source repo">Repo</a>
+                  <i class="fas fa-download" aria-hidden="true"></i>
+               <a href="https://bit.ly/TalesFromTheTrenches-Deck" title="TftT Slide Deck">Slide Deck</a>
+               <i class="fas fa-film" aria-hidden="true"></i>
+               <a href="https://bit.ly/TalesFromTheTrenches-Video"
+                  title="Session recording on YouTube">Video</a></p>
+            <ul class="text-muted">
+               <li><a href="https://www.developerdeveloperdeveloper.com/schedule">DDD 2021 (Virtual) - November 2021</a> </li>
+               <li><a href="https://www.meetup.com/DeveloperSouthCoast/events/281316875/">Dev South Coast - October 2021</a></li>
+            </ul>
+            <div>
+               <p>We’ve all been there - having to support, fix and improve a legacy code base with 
+                  all its history and foibles.</p>
+               <p>In this talk I’ll dive deep into some of the horrors of a 20 year old legacy codebase. 
+                  I’ll try and understand how those horrors came to be and give approaches to mitigating 
+                  them and ultimately modernising the code - giving another 20 years of life to a product.</p>
+            </div>
+         </div>
+
+         <hr />
 
          <div>
             <h3>Solving the Travelling Surveyor problem</h3>
@@ -42,7 +68,7 @@
                <a href="http://bit.ly/or-tools-video"
                   title="Session recording on YouTube">Video</a></p>
             <ul class="text-muted">
-               <li><a href="https://www.developerdeveloperdeveloper.com/sessions">DDD 2020 (Virtual) - October 2020</a> </li>
+               <li><a href="https://web.archive.org/web/20210227093625/https://www.developerdeveloperdeveloper.com/schedule">DDD 2020 (Virtual) - October 2020</a> </li>
             </ul>
             <div>
                <p>The "Travelling Salesman" problem is a computational classic - but firmly grounded in the real world.</p>
@@ -54,6 +80,8 @@
                   API for describing general case routing problems to pass to the Google OR Tools library.</p>
             </div>
          </div>
+
+         <hr />
 
          <div>
             <h3>TPL Dataflow</h3>
@@ -79,6 +107,8 @@
                   of parallelism - with samples that give you a bit more than "Hello World".</p>
             </div>
          </div>
+
+         <hr />
 
          <div>
             <h3>You're the Tech Lead... <span style="font-weight:bolder; font-style: oblique">you</span> fix it!</h3>
@@ -108,6 +138,8 @@
                <p>Amongst other things...</p>
             </div>
          </div>
+
+         <hr />
 
          <div>
             <h3>Azure In Action - CosmosDB, Functions and ServiceBus in Perfect Harmony</h3>
