Added You Fix It video link

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -113,7 +113,10 @@
          <div>
             <h3>You're the Tech Lead... <span style="font-weight:bolder; font-style: oblique">you</span> fix it!</h3>
             <p class="text-right"><i class="fas fa-download" aria-hidden="true"></i>
-               <a href="http://bit.ly/YouFixIt-Deck" title="YOU Fix It! Slide Deck">Slide Deck</a></p>
+               <a href="http://bit.ly/YouFixIt-Deck" title="YOU Fix It! Slide Deck">Slide Deck</a>
+               <i class="fas fa-film" aria-hidden="true"></i>
+               <a href="https://bit.ly/YouFixIt-Video"
+                  title="10 More Things video from DDD East Midlands 2019">Video</a></p>
             <ul class="text-muted">
                <li><a href="https://www.dddeastmidlands.com/">DDD East Midlands - October 2019</a></li>
                <li><a href="https://dddsouthwest.com/">DDD South West - April 2019</a></li>
