Update work history

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -40,13 +40,27 @@
   <div class="col-6">
     	 						
     <ul class="timeline">
-        <!-- Landmark -->
+
+      <!-- Landmark -->
+        <li class="timeline-inverted">
+          <div class="timeline-badge danger"><i class="glyphicon glyphicon-briefcase"></i></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4 class="timeline-title">Chief Solutions Architect - Landmark Information Group</h4>
+              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> November 2021 – Present</small></p>
+            </div>
+            <div class="timeline-body">
+              <p>Enterprise & Solutions Architecture, Azure, department management, mentoring.</p>
+            </div>
+          </div>
+        </li>
+
         <li>
           <div class="timeline-badge success"><i class="glyphicon glyphicon-briefcase"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title">Technical Lead - Landmark Information Group</h4>
-              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> September 2011 – Present</small></p>
+              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> September 2011 – October 2021</small></p>
             </div>
             <div class="timeline-body">
               <p>Enterprise software design & architecture, storyboarding, C#, Silverlight, WCF, SQL Server, team leading, mentoring.</p>
@@ -101,7 +115,7 @@
           <div class="timeline-badge success"><i class="glyphicon glyphicon-briefcase"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Various, to IT Project Manager - Sift Group Ltd</h4>
+              <h4 class="timeline-title">IT Project Manager - Sift Group Ltd</h4>
               <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> Aug 1998 – Jan 2003</small></p>
             </div>
             <div class="timeline-body">
