Added Azure Functions Health talk from Global Azure Days 2023

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -6,7 +6,7 @@
          <div class="jumbotron">
             <h2><i class="fas fa-bullhorn"></i> Speaking</h2>
             <div class="text-justify">
-               <p>It's part of my job as a Technical Lead to help train and mentor
+               <p>It's part of my job to help train and mentor
                   development teams - and a big part of that is presenting technical
                   sessions to my colleagues.</p>
                <p>But I've also been very lucky over the last few years to be asked to speak
@@ -27,6 +27,30 @@
       </div>
 
       <div class="col">
+
+         <div>
+            <h3>Azure Functions Health</h3>
+            <h5><span style="font-weight:bolder; font-style: oblique">Abusing the Azure Functions Runtime for Fun and Profit</span></h5>
+            <p class="text-right">
+               
+                  <i class="fas fa-code" aria-hidden="true"></i>
+                  <a href="https://bit.ly/AbusingAzureFunctionsRuntime-Repo" title="Source repo">Repo</a>
+                  <i class="fas fa-download" aria-hidden="true"></i>
+               <a href="https://bit.ly/AbusingAzureFunctionsRuntime-Deck" title="Slide Deck">Slide Deck</a>
+               <i class="fas fa-film" aria-hidden="true"></i>
+               <a href="https://bit.ly/AbusingAzureFunctionsRuntime-Video"
+                  title="Session recording on YouTube">Video</a></p>
+            <ul class="text-muted">
+               <li><a href="https://developer.microsoft.com/en-us/reactor/events/19851/">Global Azure Days 2023 - London - May 2034</a></li>
+            </ul>
+            <div>
+               <p>In this talk I delve into the guts of the Azure Functions Runtime for .Net and show how its hidden 
+                  extensibility features can let you implement cross-cutting concerns.</p>
+               <p>I cover the background to why I decided to abuse the Azure Functions Runtime in this way, look at 
+                  how I found the semi-secret extensibility points and show a couple of implementations that solved 
+                  specific problems across a multitude of micro-services codebases.</p>
+            </div>
+         </div>
 
          <div>
             <h3>Tales from the Trenches</h3>
